[gd_scene load_steps=2 format=3 uid="uid://b8nthfboal8sq"]

[ext_resource type="Script" path="res://scripts/UI scripts/pause_menu.gd" id="1_qu67l"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 399.0
offset_bottom = 223.0
script = ExtResource("1_qu67l")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 400.0
offset_bottom = 224.0
color = Color(0.100575, 0.154434, 0.0815076, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 400.0
offset_bottom = 224.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="ButtonVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonVBox"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 10
text = "Continue Game"

[node name="ReturnButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonVBox"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 10
text = "Return to menu"

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonVBox"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 10
text = "Restart level"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonVBox/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonVBox/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonVBox/RestartButton" to="." method="_on_restart_button_pressed"]
